# feature_selection

./: .gitignore  README.md  pyproject.toml
avatars_visualization/: image_grid.py
feature_selection/: genetic.py
feature_selection/core/: __init__.py  adaptive_search.py  base.py  beam_search.py  dfs_search.py  full_search.py  genetic.py  stepwise_selection.py
feature_selection/schemas/: history.py
feature_selection/visualization/: adaptive_search_visualization.py  selection_progress.py
feature_selection/visualization/avatars/: constants.py  encoding.py  image_grid.py
notebooks/: genetic.ipynb
tests/feature_selection/core/: __init__.py  test_core_interface.py  test_data.py
